tests/hevm/fail/unspecced_storage/unspecced_storage.act
contract A

constructor
interface constructor()

iff

  CALLVALUE == 0

creates

  mapping (uint:=uint) x := []

transition f
interface f()

// fails to mention the state update

returns

  1
